test_case/rust-lang_rust/23858_152516767.rs
 Rust
fn id<T>(t: T) -> T { t }
fn main() {
    let x = id(&2); //~ ERROR borrowed value does not live long enough
    println!("{}", x);    
    let y = &2;
    println!("{}", y); // no error
}
